--- a/config/preamble.sty
+++ b/config/preamble.sty
@@ -86,6 +86,8 @@
 % Allows putting floats precisely where one wishes with H
 \usepackage{float}
 
+\usepackage{placeins}
+
 % Include tables with powerful and easy to use tabularray package
 \usepackage{tabularray}
 
