--- a/tables/04_configurations_vinnana.tex
+++ b/tables/04_configurations_vinnana.tex
@@ -8,7 +8,6 @@
     \begin{tblr}{
         vlines,
         row{1}={font=\bfseries,halign=c,bg=lightgray!30},
-        % row{7-8} = {bg = lightgray!20}
         }
     \hline
         \SetCell[c=5]{c} vinnana.kask  \\
@@ -23,12 +22,12 @@
     \hline
         & \SetCell[c=4]{c} Horovod-Python \\
     \hline
-        GPUs & 1 GPU & 2 GPUs & 4 GPUs & $-$ \\
+        GPUs & $-$ & 1 GPU & 2 GPUs & 4 GPUs \\
     \hline
     \hline
         & \SetCell[c=4]{c} MPI-Fortran + Horovod-Python  \\
     \hline
-        Hybrid & 8 Processes \& 1 GPU & 16 Processes \& 2 GPUs & 32 Processes \& 4 GPUs & $-$ \\
+        Hybrid & $-$ & 8 Processes \& 1 GPU & 16 Processes \& 2 GPUs & 32 Processes \& 4 GPUs \\
     \hline
     \end{tblr}
 \end{table}
