--- a/tables/04_implementations.tex
+++ b/tables/04_implementations.tex
@@ -7,9 +7,9 @@
         vlines,
         row{1}={font=\bfseries,halign=c,bg=lightgray!30}
     }
-                & sanna.kask        & vinnana.kask                  \\
-        CPUs    & OMP-CPP           & MPI-Fortran                   \\
-        GPUs    & OMP-CUDA          & Horovod-Python                \\
-        Hybrid  & OMP-CPP+OMP-CUDA  & MPI-Fortran+Horovod-Python    \\
+                & sanna.kask            & vinnana.kask                      \\
+        CPUs    & OMP-CPP               & MPI-Fortran                       \\
+        GPUs    & OMP-CUDA              & Horovod-Python                    \\
+        Hybrid  & OMP-CPP + OMP-CUDA    & MPI-Fortran + Horovod-Python      \\
     \end{tblr}
 \end{table}
