--- a/tables/05_Hybrid_isD+spD_energy.tex
+++ b/tables/05_Hybrid_isD+spD_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{Hybrid}, implementation: \textbf{OMP-CPP+OMP-CUDA},\\
@@ -18,49 +18,49 @@
     \hline
         {Std\@. dev\@. of time [-]}                             & 0.426     & 0.051     & 1.986         & 0.606 \\
     \hline
-        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 110,94  & 77,86   & 95,151       & 109,841 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                 & 110.94    & 77.86     & 95.151        & 109.841 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,8     & 1,084      & 3,509        & 1,936 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.8       & 1.084     & 3.509         & 1.936 \\
     \hline
-        {(CPU\@: 0) \\ Avg\@. power draw [W]}                   & 8.063     & 5.574     & 3.342         & 2.819 \\
+        {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                 & 8.063     & 5.574     & 3.342         & 2.819 \\
     \hline
-        {(CPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.022     & 0.01      & 0.094         & 0.032 \\
+        {(CPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.022     & 0.01      & 0.094         & 0.032 \\
     \hline
-        {(CPU\@: 1) \\ Avg\@. power draw [W]}                   & 5.262     & 2.748     & 3.278         & 2.835 \\
+        {(CPU\@: 1) \\ Avg\@. energy used [kJ]}                 & 5.262     & 2.748     & 3.278         & 2.835 \\
     \hline
-        {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.014     & 0.006     & 0.091         & 0.034 \\
+        {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.014     & 0.006     & 0.091         & 0.034 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 38,92    & 19,89    & 11,74       & 8,767 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                 & 38.92     & 19.89     & 11.74         & 8.767 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,468     & 0,153     & 0,41         & 0,174 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.468     & 0.153     & 0.41          & 0.174 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 4,495     & 20,318   & 11,974       & 8,998 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                 & 4.495     & 20.318    & 11.974        & 8.998 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,012     & 0,276     & 0,451         & 0,132 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.012     & 0.276     & 0.451         & 0.132 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 2,312    & 1,197    & 12,129       & 9,083 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                 & 2.312     & 1.197     & 12.129        & 9.083 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,033     & 0,014     & 0,423         & 0,161 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.033     & 0.014     & 0.423         & 0.161 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 3,045    & 1,591    & 12,574        & 9,492 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                 & 3.045     & 1.591     & 12.574        & 9.492 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,008     & 0,002     & 0,458         & 0,125 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.008     & 0.002     & 0.458         & 0.125 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. power draw [W]}                   & 0,716     & 0,374      & 0,235         & 8,942 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                 & 0.716     & 0.374     & 0.235         & 8.942 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,004     & 0,001      & 0,008         & 0,112 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.004     & 0.001     & 0.008         & 0.112 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. power draw [W]}                   & 3,238    & 1,706    & 1,165        & 9,158 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                 & 3.238     & 1.706     & 1.165         & 9.158 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,02     & 0,008     & 0,037        & 0,141 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.02      & 0.008     & 0.037         & 0.141 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. power draw [W]}                   & 1,388     & 0,714     & 0,428         & 9,198 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                 & 1.388     & 0.714     & 0.428         & 9.198 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,078     & 0,014     & 0,016         & 0,114 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.078     & 0.014     & 0.016         & 0.114 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. power draw [W]}                   & 2,225    & 1,174    & 0,801         & 10,164 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                 & 2.225     & 1.174     & 0.801         & 10.164 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,054     & 0,018     & 0,025         & 0,143 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.054     & 0.018     & 0.025         & 0.143 \\
     \hline
     \end{tblr}
 \end{table}
