--- a/tables/05_Hybrid_luC+epD_energy.tex
+++ b/tables/05_Hybrid_luC+epD_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{Hybrid}, implementation: \textbf{OMP-CPP+OMP-CUDA},\\
@@ -18,49 +18,49 @@
     \hline
         {Std\@. dev\@. of time [-]}                             & 0.112     & 0.047     & 0.058         & 0.161 \\
     \hline
-        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 16,227    & 21,175    & 39,53       & 59,123 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                 & 16.227    & 21.175    & 39.53         & 59.123 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,15      & 0,116     & 0,379         & 0,509 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.15      & 0.116     & 0.379         & 0.509 \\
     \hline
-        {(CPU\@: 0) \\ Avg\@. power draw [W]}                   & 1.494     & 2.064     & 1.917         & 2.046 \\
+        {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                 & 1.494     & 2.064     & 1.917         & 2.046 \\
     \hline
-        {(CPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.006     & 0.006     & 0.007         & 0.036 \\
+        {(CPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.006     & 0.006     & 0.007         & 0.036 \\
     \hline
-        {(CPU\@: 1) \\ Avg\@. power draw [W]}                   & 0.826     & 0.828     & 1.941         & 2.06 \\
+        {(CPU\@: 1) \\ Avg\@. energy used [kJ]}                 & 0.826     & 0.828     & 1.941         & 2.06 \\
     \hline
-        {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.004     & 0.002     & 0.009         & 0.04 \\
+        {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.004     & 0.002     & 0.009         & 0.04 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 4,414    & 4,431    & 4,385        & 4,423 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                 & 4.414     & 4.431     & 4.385         & 4.423 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,037     & 0,016     & 0,016          & 0,015 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.037     & 0.016     & 0.016         & 0.015 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 0,714     & 4,547    & 4,51        & 4,549 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                 & 0.714     & 4.547     & 4.51          & 4.549 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,004     & 0,027     & 0,016         & 0,022 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.004     & 0.027     & 0.016         & 0.022 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 0,367     & 0,37     & 4,537        & 4,598 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                 & 0.367     & 0.37      & 4.537         & 4.598 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,003     & 0,004     & 0,029        & 0,032 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.003     & 0.004     & 0.029         & 0.032 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 0,484     & 0,486     & 4,969        & 5,018 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                 & 0.484     & 0.486     & 4.969         & 5.018 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,003     & 0,001     & 0,04         & 0,049 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.003     & 0.001     & 0.04          & 0.049 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. power draw [W]}                   & 0,114     & 0,115     & 0,116         & 4,443 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                 & 0.114     & 0.115     & 0.116         & 4.443 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,001     & 0,001     & 0,001         & 0,03 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.001     & 0.001     & 0.001         & 0.03 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. power draw [W]}                   & 0,515     & 0,518     & 0,537          & 4,847 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                 & 0.515     & 0.518     & 0.537         & 4.847 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,003     & 0,003     & 0,005         & 0,037 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.003     & 0.003     & 0.005         & 0.037 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. power draw [W]}                   & 0,179     & 0,183      & 0,213         & 4,623 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                 & 0.179     & 0.183     & 0.213         & 4.623 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,003    & 0,002     & 0,012         & 0,043 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.003     & 0.002     & 0.012         & 0.043 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. power draw [W]}                   & 0,338     & 0,353     & 0,37         & 5,048 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                 & 0.338     & 0.353     & 0.37          & 5.048 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,004     & 0,005     & 0,01         & 0,076 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]} & 0.004     & 0.005     & 0.01          & 0.076 \\
     \hline
     \end{tblr}
 \end{table}
