--- a/tables/05_OMP-CPP_1CPU_luC_energy.tex
+++ b/tables/05_OMP-CPP_1CPU_luC_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{1 CPU}, implementation: \textbf{OMP-CPP},\\
@@ -14,13 +14,13 @@
     \hline
         Results from 10 runs                                        & 1 Thread  & 5 Threads     & 10 Threads    & 20 Threads \\
     \hline
-        {Avg. Exec\@. time [s]}                                     & 703.566   & 147.528       & 76.747        & 64.501 \\
+        {Avg. Exec\@. time [s]}                                     & 706.566   & 147.528       & 76.747        & 64.501 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 & 10.667    & 1.844         & 0.169         & 0.421 \\
+        {Std\@. dev\@. of time [-]}                                 & 5.233     & 1.844         & 0.169         & 0.421 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 270,681  & 61,597       & 35,005       & 30,335 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 270.681   & 61.597        & 35.005        & 30.335 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 2,117    & 1,321         & 2,319        & 0,554 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 2.117     & 1.321         & 2.319         & 0.554 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 24.511    & 8.016         & 5.673         & 5.286 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.35      & 0.093         & 0.13          & 0.051 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 15,507   & 3,868        & 2,444         & 1,778 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 15.507    & 3.868         & 2.444         & 1.778 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,572     & 0,991         & 1,88       & 0,424 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.572     & 0.991         & 1.88          & 0.424 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 18,015   & 3,764        & 1,956        & 1,643 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 18.015    & 3.764         & 1.956         & 1.643 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,129     & 0,048         & 0,003         & 0,011 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.129     & 0.048         & 0.003         & 0.011 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 9,709    & 2,005        & 1,064        & 0,879 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 9.709     & 2.005         & 1.064         & 0.879 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,174    & 0,027          & 0,016          & 0,009 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.174     & 0.027         & 0.016         & 0.009 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 12,168   & 2,546        & 1,325        & 1,115 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 12.168    & 2.546         & 1.325         & 1.115 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,093     & 0,03         & 0,004         & 0,008 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.093     & 0.03          & 0.004         & 0.008 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 2,903    & 0,605         & 0,316         & 0,266 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 2.903     & 0.605         & 0.316         & 0.266 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,024     & 0,008         & 0,001          & 0.002 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.024     & 0.008         & 0.001         & 0.002 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 12,851   & 2,71        & 1,41         & 1,182 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 12.851    & 2.71          & 1.41          & 1.182 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,11     & 0,04         & 0,007         & 0,004 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.11      & 0.04          & 0.007         & 0.004 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 4,55    & 0,963         & 0,492         & 0,415 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 4.55      & 0.963         & 0.492         & 0.415 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,105     & 0,022         & 0,008         & 0,007 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.105     & 0.022         & 0.008         & 0.007 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 9,125    & 1,879        & 0,98         & 0,83 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 9.125     & 1.879         & 0.98          & 0.83 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,088     & 0,024         & 0,015         & 0,007 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.088     & 0.024         & 0.015         & 0.007 \\
     \hline
     \end{tblr}
 \end{table}
