--- a/tables/05_OMP-CPP_1CPU_luC_power.tex
+++ b/tables/05_OMP-CPP_1CPU_luC_power.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{1 CPU}, implementation: \textbf{OMP-CPP},\\
@@ -14,9 +14,9 @@
     \hline
         Results from 10 runs                                    & 1 Thread  & 5 Threads     & 10 Threads    & 20 Threads \\
     \hline
-        {Avg. Exec\@. time [s]}                                 & 703.566   & 147.528       & 76.747        & 64.501 \\
+        {Avg. Exec\@. time [s]}                                 & 706.566   & 147.528       & 76.747        & 64.501 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             & 10.667    & 1.844         & 0.169         & 0.421 \\
+        {Std\@. dev\@. of time [-]}                             & 5.233     & 1.844         & 0.169         & 0.421 \\
     \hline
         {(Yokogawa) \\ Avg\@. power draw [W]}                   & 383.095   & 417.551       & 456.064       & 470.299 \\
     \hline
