--- a/tables/05_OMP-CPP_2CPUs_btC_energy.tex
+++ b/tables/05_OMP-CPP_2CPUs_btC_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{2 CPUs}, implementation: \textbf{OMP-CPP},\\
@@ -14,13 +14,13 @@
     \hline
         Results from 10 runs                                        & 2 Threads & 10 Threads    & 20 Threads    & 40 Threads \\
     \hline
-        {Avg. Exec\@. time [s]}                                     & 861.634   & 114.56        & 69.86         & 64.855 \\
+        {Avg. Exec\@. time [s]}                                     & 955.334   & 114.56        & 69.86         & 64.855 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 & 107.726   & 1.843         & 0.395         & 0.979 \\
+        {Std\@. dev\@. of time [-]}                                 & 1.891     & 1.843         & 0.395         & 0.979 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 365,73  & 49,575       & 33,379       & 32,428 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 365.73    & 49.575        & 33.379        & 32.428 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 400.501   & 7.389         & 1.791         & 3.862 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 1.935     & 0.739         & 0.188         & 0.39 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 28.779    & 5.834         & 4.578         & 4.63 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 2.456     & 0.07          & 0.024         & 0.05 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 20,668   & 2,482        & 1,509         & 1,408 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 20.668    & 2.482         & 1.509         & 1.408 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,108    & 0,05         & 0,007         & 0,022 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.108     & 0.05          & 0.007         & 0.022 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 24,415   & 2,927        & 1,787        & 1,657 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 24.415    & 2.927         & 1.787         & 1.657 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,055    & 0,046         & 0,011         & 0,024 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.055     & 0.046         & 0.011         & 0.024 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 13,384   & 1,562       & 0,957         & 0,891 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 13.384    & 1.562         & 0.957         & 0.891 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,163    & 0,034         & 0,012         & 0,016 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.163     & 0.034         & 0.012         & 0.016 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 16,444   & 1,968        & 1,202        & 1,116 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 16.444    & 1.968         & 1.202         & 1.116 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,032    & 0,031          & 0,006         & 0,017 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.032     & 0.031         & 0.006         & 0.017 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 3,908    & 0,471         & 0,287         & 0,266 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 3.908     & 0.471         & 0.287         & 0.266 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,006     & 0,006         & 0,002         & 0,004 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.006     & 0.006         & 0.002         & 0.004 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 17,591   & 2,103        & 1,298        & 1,209 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 17.591    & 2.103         & 1.298         & 1.209 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,064    & 0,036          & 0,007         & 0,021 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.064     & 0.036         & 0.007         & 0.021 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 6,149    & 0,74         & 0,453         & 0,422 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 6.149     & 0.74          & 0.453         & 0.422 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,179     & 0,018         & 0,007         & 0,008 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.179     & 0.018         & 0.007         & 0.008 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 11,733   & 1,39        & 0,831         & 0,777 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 11.733    & 1.39          & 0.831         & 0.777 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,351    & 0,028          & 0,011         & 0,014 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.351     & 0.028         & 0.011         & 0.014 \\
     \hline
     \end{tblr}
 \end{table}
