--- a/tables/05_OMP-CPP_2CPUs_btC_power.tex
+++ b/tables/05_OMP-CPP_2CPUs_btC_power.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{2 CPUs}, implementation: \textbf{OMP-CPP},\\
@@ -14,9 +14,9 @@
     \hline
         Results from 10 runs                                    & 2 Threads & 10 Threads    & 20 Threads    & 40 Threads \\
     \hline
-        {Avg. Exec\@. time [s]}                                 & 861.634   & 114.56        & 69.86         & 64.855 \\
+        {Avg. Exec\@. time [s]}                                 & 955.334   & 114.56        & 69.86         & 64.855 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             & 107.726   & 1.843         & 0.395         & 0.979 \\
+        {Std\@. dev\@. of time [-]}                             & 1.891     & 1.843         & 0.395         & 0.979 \\
     \hline
         {(Yokogawa) \\ Avg\@. power draw [W]}                   & 382.827   & 432.746       & 477.802       & 500.032 \\
     \hline
