--- a/tables/05_OMP-CPP_2CPUs_isD_energy.tex
+++ b/tables/05_OMP-CPP_2CPUs_isD_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{2 CPUs}, implementation: \textbf{OMP-CPP},\\
@@ -14,13 +14,13 @@
     \hline
         Results from 10 runs                                        & 2 Threads & 10 Threads    & 20 Threads    & 40 Threads \\
         \hline
-        {Avg. Exec\@. time [s]}                                     & 398.075   & 86.848        & 47.879        & 38.223 \\
+        {Avg. Exec\@. time [s]}                                     & 393.075   & 86.848        & 47.879        & 38.223 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 & 18.477    & 2.783         & 1.263         & 1.377 \\
+        {Std\@. dev\@. of time [-]}                                 & 7.964     & 2.783         & 1.263         & 1.377 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 150,896  & 35,972       & 21,412       & 17,972 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 150.896   & 35.972        & 21.412        & 17.972 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 3,034    & 1,099        & 0,523         & 0,585 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 3.034     & 1.099         & 0.523         & 0.585 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 12.799    & 3.774         & 2.603         & 2.279 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.605     & 0.102         & 0.058         & 0.06 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 8,528    & 1,873        & 1,033        & 0,824 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 8.528     & 1.873         & 1.033         & 0.824 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,176     & 0,062         & 0,027         & 0,03 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.176     & 0.062         & 0.027         & 0.03 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 10,038   & 2,217        & 1,222        & 0,976 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 10.038    & 2.217         & 1.222         & 0.976 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,2     & 0,072         & 0,033         & 0,035 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.2       & 0.072         & 0.033         & 0.035 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 5,426    & 1,195         & 0,665         & 0,529 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 5.426     & 1.195         & 0.665         & 0.529 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,141     & 0,037         & 0,018         & 0,019 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.141     & 0.037         & 0.018         & 0.019 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 6,772    & 1,496        & 0,825           & 0,658 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 6.772     & 1.496         & 0.825         & 0.658 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,137     & 0,049         & 0,022         & 0,024 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.137     & 0.049         & 0.022         & 0.024 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 1,615    & 0,354         & 0,196        & 0,157 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 1.615     & 0.354         & 0.196         & 0.157 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,034     & 0,012         & 0,005         & 0,006 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.034     & 0.012         & 0.005         & 0.006 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 7,198    & 1,598        & 0,88         & 0,707 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 7.198     & 1.598         & 0.88          & 0.707 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,189      & 0,053         & 0,022          & 0,026 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.189     & 0.053         & 0.022         & 0.026 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 2,437    & 0,552         & 0,307         & 0,24 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 2.437     & 0.552         & 0.307         & 0.24 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,048     & 0,017         & 0,009         & 0.009 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.048     & 0.017         & 0.009         & 0.009 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 4,865    & 1,088        & 0,591         & 0,475 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 4.865     & 1.088         & 0.591         & 0.475 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,115      & 0,043         & 0,021         & 0,018 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.115     & 0.043         & 0.021         & 0.018 \\
     \hline
     \end{tblr}
 \end{table}
