--- a/tables/05_OMP-CPP_2CPUs_isD_power.tex
+++ b/tables/05_OMP-CPP_2CPUs_isD_power.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{2 CPUs}, implementation: \textbf{OMP-CPP},\\
@@ -14,9 +14,9 @@
     \hline
         Results from 10 runs                                    & 2 Threads & 10 Threads    & 20 Threads    & 40 Threads \\
     \hline
-        {Avg. Exec\@. time [s]}                                 & 398.075   & 86.848        & 47.879        & 38.223 \\
+        {Avg. Exec\@. time [s]}                                 & 393.075   & 86.848        & 47.879        & 38.223 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             & 18.477    & 2.783         & 1.263         & 1.377 \\
+        {Std\@. dev\@. of time [-]}                             & 7.964     & 2.783         & 1.263         & 1.377 \\
     \hline
         {(Yokogawa) \\ Avg\@. power draw [W]}                   & 383.887   & 414.22        & 447.238       & 470.243 \\
     \hline
