--- a/tables/05_OMP-CPP_2CPUs_luC_energy.tex
+++ b/tables/05_OMP-CPP_2CPUs_luC_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{2 CPUs}, implementation: \textbf{OMP-CPP},\\
@@ -14,13 +14,13 @@
     \hline
         Results from 10 runs                                        & 2 Threads & 10 Threads    & 20 Threads    & 40 Threads \\
     \hline
-        {Avg. Exec\@. time [s]}                                     & 598.76    & 75.879        & 46.189        & 43.611 \\
+        {Avg. Exec\@. time [s]}                                     & 599.96    & 75.879        & 46.189        & 43.611 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 & 90.086    & 0.893         & 0.889         & 0.981 \\
+        {Std\@. dev\@. of time [-]}                                 & 2.984     & 0.893         & 0.889         & 0.981 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 231,113  & 33,225       & 22,391       & 21,919 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 231.113   & 33.225        & 22.391        & 21.919 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 1,38   & 0,366         & 0,334         & 0,396 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 1.38      & 0.366         & 0.334         & 0.396 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 19.668    & 3.968         & 3.089         & 3.084 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 2.606     & 0.034         & 0.043         & 0.051 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 12,948   & 1,637        & 0,997         & 0,938 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 12.948    & 1.637         & 0.997         & 0.938 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,124    & 0,019         & 0,021          & 0,022 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.124     & 0.019         & 0.021         & 0.022 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 15,307   & 1,934        & 1,176        & 1,11 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 15.307    & 1.934         & 1.176         & 1.11 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,082    & 0,022        & 0,022         & 0,025 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.082     & 0.022         & 0.022         & 0.025 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 8,113    & 1,059       & 0,64         & 0,612 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 8.113     & 1.059         & 0.64          & 0.612 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,131    & 0,02         & 0,014         & 0,016 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.131     & 0.02          & 0.014         & 0.016 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 10,34   & 1,307        & 0,797         & 0,751 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 10.34     & 1.307         & 0.797         & 0.751 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,057    & 0,015         & 0,015         & 0.017 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.057     & 0.015         & 0.015         & 0.017 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 2,457    & 0,31         & 0,189         & 0,178 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 2.457     & 0.31          & 0.189         & 0.178 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,029     & 0,003         & 0,004         & 0,004 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.029     & 0.003         & 0.004         & 0.004 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 11,018   & 1,413        & 0,863         & 0,808 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 11.018    & 1.413         & 0.863         & 0.808 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,092    & 0,025          & 0,02         & 0,018 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.092     & 0.025         & 0.02          & 0.018 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 3,714    & 0,462         & 0,285         & 0,275 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 3.714     & 0.462         & 0.285         & 0.275 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,102      & 0,009         & 0,005         & 0,008 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.102     & 0.009         & 0.005         & 0.008 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 7,365    & 0,951         & 0,566          & 0,551 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 7.365     & 0.951         & 0.566         & 0.551 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,127    & 0,016         & 0,02         & 0,012 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.127     & 0.016         & 0.02          & 0.012 \\
     \hline
     \end{tblr}
 \end{table}
