--- a/tables/05_OMP-CPP_2CPUs_luC_power.tex
+++ b/tables/05_OMP-CPP_2CPUs_luC_power.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{2 CPUs}, implementation: \textbf{OMP-CPP},\\
@@ -14,9 +14,9 @@
     \hline
         Results from 10 runs                                    & 2 Threads & 10 Threads    & 20 Threads    & 40 Threads \\
     \hline
-        {Avg. Exec\@. time [s]}                                 & 598.76    & 75.879        & 46.189        & 43.611 \\
+        {Avg. Exec\@. time [s]}                                 & 599.96    & 75.879        & 46.189        & 43.611 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             & 90.086    & 0.893         & 0.889         & 0.981 \\
+        {Std\@. dev\@. of time [-]}                             & 2.984     & 0.893         & 0.889         & 0.981 \\
     \hline
         {(Yokogawa) \\ Avg\@. power draw [W]}                   & 385.213   & 437.88        & 484.794       & 502.661 \\
     \hline
