--- a/tables/05_OMP-CUDA_spD_energy.tex
+++ b/tables/05_OMP-CUDA_spD_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{GPUs}, implementation: \textbf{OMP-CUDA},\\
@@ -18,9 +18,9 @@
     \hline
         {Std\@. dev\@. of time [-]}                                 & 0.128     & 0.122     & 0.073     & 0.215 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 134,471  & 179,478  & 330,635   & 552,51 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 134.471   & 179.478   & 330.635   & 552.51 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,599     & 0,912     & 7,618    & 4,649 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.599     & 0.912     & 7.618     & 4.649 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 7.409     & 8.244     & 8.341     & 10.271 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.024     & 0.014     & 0.023     & 0.019 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 49,021   & 49,486   & 46,18    & 46,152 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 49.021    & 49.486    & 46.18     & 46.152 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,54     & 0,386     & 0,172      & 0,139 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.54      & 0.386     & 0.172     & 0.139 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 5,656    & 50,4   & 47,846   & 47,52 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 5.656     & 50.4      & 47.846    & 47.52 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,011     & 0,696    & 0,089     & 0,266 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.011     & 0.696     & 0.089     & 0.266 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 2,994    & 2,986    & 48,151   & 47,981 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 2.994     & 2.986     & 48.151    & 47.981 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,04     & 0,041     & 0,298     & 0,212 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.04      & 0.041     & 0.298     & 0.212 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 3,834    & 3,835    & 49,302   & 49,369 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 3.834     & 3.835     & 49.302    & 49.369 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,007     & 0,005     & 0,224     & 0,145 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.007     & 0.005     & 0.224     & 0.145 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 0,9     & 0,896    & 0,902     & 47,169 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 0.9       & 0.896     & 0.902     & 47.169 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,002     & 0,005     & 0,003     & 0,119 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.002     & 0.005     & 0.003     & 0.119 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 4,111    & 4,155    & 4,561    & 47,604 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 4.111     & 4.155     & 4.561     & 47.604 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,036     & 0,017     & 0,034     & 0,032 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.036     & 0.017     & 0.034     & 0.032 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 1,695    & 1,759     & 1,584    & 48,942 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 1.695     & 1.759     & 1.584     & 48.942 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,04    & 0,02       & 0,038     & 0,296 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.04      & 0.02      & 0.038     & 0.296 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 2,994    & 2,964     & 3,145    & 54,549 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 2.994     & 2.964     & 3.145     & 54.549 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,051     & 0,033     & 0,036     & 0,353 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.051     & 0.033     & 0.036     & 0.353 \\
     \hline
     \end{tblr}
 \end{table}
