--- a/tables/05_MPI-Fortran_isDx_power.tex
+++ b/tables/05_MPI-Fortran_isDx_power.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{vinnana.kask}, device: \textbf{CPUs}, implementation: \textbf{MPI-Fortran},\\
@@ -10,7 +10,7 @@
         row{2,5-6,9-10,13-14} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=4]{c} 2 CPUs  \\
+        & \SetCell[c=4]{c} CPUs  \\
     \hline
         Results from 10 runs                                    & Processes: 4  & Processes: 8  & Processes: 16 & Processes: 32 \\
     \hline
