--- a/tables/05_OMP-CPP_1CPU_isD_energy.tex
+++ b/tables/05_OMP-CPP_1CPU_isD_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{1 CPU}, implementation: \textbf{OMP-CPP},\\
@@ -14,13 +14,13 @@
     \hline
         Results from 10 runs                                        & 1 Thread  & 5 Threads     & 10 Threads    & 20 Threads \\
     \hline
-        {Avg. Exec\@. time [s]}                                     & 649       & 183.121       & 76.25         & 57.389 \\
+        {Avg. Exec\@. time [s]}                                     & 649       & 143.321       & 76.25         & 57.389 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 & 0.277     & 125.881       & 0.26          & 0.056 \\
+        {Std\@. dev\@. of time [-]}                                 & 0.277     & 0.062         & 0.26          & 0.056 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 245,754  & 56,548       & 31,534       & 24,497 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 245.754   & 56.548        & 31.534        & 24.497 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,101     & 0,03        & 0,09         & 0,024 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.101     & 0.03          & 0.09          & 0.024 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 21.122    & 7.194         & 4.314         & 3.607 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.085     & 2.857         & 0.005         & 0.004 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 14,05   & 3,113        & 1,655       & 1,251 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 14.05     & 3.113         & 1.655         & 1.251 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,034     & 0,009          & 0,008          & 0,004 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.034     & 0.009         & 0.008         & 0.004 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 16,579   & 3,664        & 1,948        & 1,464 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 16.579    & 3.664         & 1.948         & 1.464 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,014     & 0,004         & 0,007         & 0,001 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.014     & 0.004         & 0.007         & 0.001 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 8,996     & 1,966        & 1,03        & 0,792 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 8.996     & 1.966         & 1.03          & 0.792 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,103     & 0,021         & 0,013         & 0,009 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.103     & 0.021         & 0.013         & 0.009 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 11,18   & 2,47        & 1,312       & 0,988 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 11.18     & 2.47          & 1.312         & 0.988 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,016     & 0,004         & 0,004         & 0,001 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.016     & 0.004         & 0.004         & 0.001 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 2,663    & 0,589         & 0,313         & 0,234 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 2.663     & 0.589         & 0.313         & 0.234 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,01     & 0,002         & 0,002         & 0,001 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.01      & 0.002         & 0.002         & 0.001 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 11,906   & 2,649        & 1,403        & 1,058 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 11.906    & 2.649         & 1.403         & 1.058 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,04       & 0,015         & 0,008         & 0,008 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.04      & 0.015         & 0.008         & 0.008 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 4,211    & 0,892         & 0,478         & 0,362 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 4.211     & 0.892         & 0.478         & 0.362 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,103     & 0,011         & 0,007         & 0,007 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.103     & 0.011         & 0.007         & 0.007 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 8,016    & 1,734         & 0,925          & 0,722 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 8.016     & 1.734         & 0.925         & 0.722 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,078     & 0,014         & 0,014         & 0,008 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.078     & 0.014         & 0.014         & 0.008 \\
     \hline
     \end{tblr}
 \end{table}
