--- a/tables/05_OMP-CPP_1CPU_isD_power.tex
+++ b/tables/05_OMP-CPP_1CPU_isD_power.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{1 CPU}, implementation: \textbf{OMP-CPP},\\
@@ -14,9 +14,9 @@
     \hline
         Results from 10 runs                                    & 1 Thread  & 5 Threads     & 10 Threads    & 20 Threads \\
     \hline
-        {Avg. Exec\@. time [s]}                                 & 649       & 183.121       & 76.25         & 57.389 \\
+        {Avg. Exec\@. time [s]}                                 & 649       & 143.321       & 76.25         & 57.389 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             & 0.277     & 125.881       & 0.26          & 0.056 \\
+        {Std\@. dev\@. of time [-]}                             & 0.277     & 0.062         & 0.26          & 0.056 \\
     \hline
         {(Yokogawa) \\ Avg\@. power draw [W]}                   & 378.666   & 394.555       & 413.561       & 426.861 \\
     \hline
