--- a/tables/05_OMP-CUDA_epD_energy.tex
+++ b/tables/05_OMP-CUDA_epD_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{GPUs}, implementation: \textbf{OMP-CUDA},\\
@@ -13,14 +13,14 @@
         & \SetCell[c=4]{c} GPUs  \\
     \hline
         Results from 10 runs                                        & 1 GPU     & 2 GPUs    & 4 GPUs    & 8 GPUs \\
-        \hline
+    \hline
         {Avg. Exec\@. time [s]}                                     & 28.154    & 28.336    & 28.342    & 28.956 \\
     \hline
         {Std\@. dev\@. of time [-]}                                 & 0.148     & 0.035     & 0.15      & 0.132 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 15,401   & 19,923   & 36,497   & 56,373 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 15.401    & 19.923    & 36.497    & 56.373 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,192     & 0,132     & 0,74     & 0,596 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.192     & 0.132     & 0.74      & 0.596 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 0.934     & 1.075     & 1.071     & 1.302 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.008     & 0.004     & 0.009     & 0.005 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 4,471    & 4,532    & 4,404    & 4,413 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 4.471     & 4.532     & 4.404     & 4.413 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,078     & 0,011     & 0,041     & 0,01 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.078     & 0.011     & 0.041     & 0.01 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 0,713     & 4,639    & 4,546    & 4,561 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 0.713     & 4.639     & 4.546     & 4.561 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,004     & 0,067     & 0,047     & 0,022 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.004     & 0.067     & 0.047     & 0.022 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 0,397     & 0,398      & 4,633    & 4,643 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 0.397     & 0.398     & 4.633     & 4.643 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,006      & 0,003     & 0,033     & 0,041 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.006     & 0.003     & 0.033     & 0.041 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 0,485     & 0,488     & 5,007    & 5,08 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 0.485     & 0.488     & 5.007     & 5.08 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,003     & 0,001     & 0,05     & 0,046 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.003     & 0.001     & 0.05      & 0.046 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 0,116     & 0,118     & 0,12     & 4,462 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 0.116     & 0.118     & 0.12      & 4.462 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,001     & 0,001     & 0,001      & 0,046 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.001     & 0.001     & 0.001     & 0.046 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 0,52     & 0,525     & 0,547     & 4,868 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 0.52      & 0.525     & 0.547     & 4.868 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,005     & 0,002     & 0,005     & 0,031 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.005     & 0.002     & 0.005     & 0.031 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 0,174     & 0,181     & 0,202     & 4,621 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 0.174     & 0.181     & 0.202     & 4.621 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,002     & 0,004     & 0,013     & 0,042 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.002     & 0.004     & 0.013     & 0.042 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 0,339     & 0,344     & 0,374     & 5,111 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 0.339     & 0.344     & 0.374     & 5.111 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,005     & 0,004     & 0,006     & 0,09 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.005     & 0.004     & 0.006     & 0.09 \\
     \hline
     \end{tblr}
 \end{table}
