--- a/tables/05_OMP-CUDA_luD_energy.tex
+++ b/tables/05_OMP-CUDA_luD_energy.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{GPUs}, implementation: \textbf{OMP-CUDA},\\
@@ -18,9 +18,9 @@
     \hline
         {Std\@. dev\@. of time [-]}                                 & 0.07      & 0.089     & 0.073     & 0.177 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 183,878   & 245,155  & 442,551  & 747,518 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 183.878   & 245.155   & 442.551   & 747.518 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,355     & 1,311    & 10,395   & 8,234 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.355     & 1.311     & 10.395    & 8.234 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 10.137    & 11.423    & 11.47     & 14.076 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.041     & 0.025     & 0.028     & 0.026 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 67,669   & 67,453   & 63,477   & 63,228 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 67.669    & 67.453    & 63.477    & 63.228 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,467     & 0,266     & 0,466      & 0,271 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.467     & 0.266     & 0.466     & 0.271 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 7,66    & 69,122   & 65,58    & 64,897 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 7.66      & 69.122    & 65.58     & 64.897 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,012     & 0,597     & 0,257     & 0,048 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.012     & 0.597     & 0.257     & 0.048 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 4,002    & 3,979     & 66,399    & 66,066 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 4.002     & 3.979     & 66.399    & 66.066 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,039     & 0,03     & 0,176     & 0,182 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.039     & 0.03      & 0.176     & 0.182 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 5,241    & 5,264    & 67,562   & 67,327 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 5.241     & 5.264     & 67.562    & 67.327 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,007      & 0,014     & 0,147     & 0,167 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.007     & 0.014     & 0.147     & 0.167 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 1,238    & 1,247    & 1,322    & 65,21 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 1.238     & 1.247     & 1.322     & 65.21 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,004     & 0,007     & 0,013     & 0,116 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.004     & 0.007     & 0.013     & 0.116 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 5,639    & 5,717     & 6,355    & 65,474 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 5.639     & 5.717     & 6.355     & 65.474 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,033     & 0,035      & 0,044     & 0,068 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.033     & 0.035     & 0.044     & 0.068 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 2,506    & 2,665    & 2,436    & 67,033 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 2.506     & 2.665     & 2.436     & 67.033 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,06     & 0,027     & 0,039     & 0,156 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.06      & 0.027     & 0.039     & 0.156 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 3,963     & 3,969    & 4,043    & 74,768 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 3.963     & 3.969     & 4.043     & 74.768 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,043     & 0,049     & 0,052     & 0,437 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.043     & 0.049     & 0.052     & 0.437 \\
     \hline
     \end{tblr}
 \end{table}
