--- a/tables/05_XCeption_power.tex
+++ b/tables/05_XCeption_power.tex
@@ -1,4 +1,4 @@
-\begin{table}[hbt!]
+\begin{table}[!htbp]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{vinnana.kask}, device: \textbf{GPUs}, implementation: \textbf{Horovod-Python},\\
