--- a/tables/summary/mpi-gpu-xception.tex
+++ b/tables/summary/mpi-gpu-xception.tex
@@ -1,8 +1,8 @@
-\begin{table}[hbt!]
+\begin{table}[H]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{vinnana.kask}, device: \textbf{GPUs}, implementation: \textbf{Horovod-Python},\\
-    benchmark: \textbf{Xception}, data displayed: \textbf{increase in power draw}}\label{tbl:mpi-gpu-xception}
+    benchmark: \textbf{Xception}, data displayed: \textbf{differences in power draw}}\label{tbl:mpi-gpu-xception}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -10,15 +10,18 @@
         row{2} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=2]{c} GPUs \\
+        & \SetCell[c=4]{c} GPUs \\
     \hline
-        Configurations          & Measured power draw [W]   & Increase in power draw during tests [\%] \\
+        Configurations          & {(Yokogawa) \\ Measured power draw \\ of entire node [W]}
+        & {Difference \\ (Base value: \\ 217.471) [W]}
+        & Offset [W]
+        & Increase [\%] \\
     \hline
-        1 GPU                   & 511.645                   & 62.59 \\
+        1 GPU                   & 511.645                   & 246.615 & 29.144 & 62.59 \\
     \hline
-        2 GPUs                  & 665.957                   & 111.62 \\
+        2 GPUs                  & 665.957                   & 256.703 & 39.232 & 111.62 \\
     \hline
-        4 GPUs                  & 905.241                   & 187.66 \\
+        4 GPUs                  & 905.241                   & 278.475 & 61.004 & 187.66 \\
     \hline
     \end{tblr}
 \end{table}
