--- a/tables/summary/mpi-hybrid-epD.tex
+++ b/tables/summary/mpi-hybrid-epD.tex
@@ -1,8 +1,8 @@
-\begin{table}[hbt!]
+\begin{table}[H]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{vinnana.kask}, device: \textbf{Hybrid}, implementation: \textbf{MPI-Fortran+Horovod-Python},\\
-    benchmark: \textbf{ep.D.x+Xception}, data displayed: \textbf{increase in power draw}}\label{tbl:mpi-hybrid-epD-xception}
+    benchmark: \textbf{ep.D.x+Xception}, data displayed: \textbf{differences in power draw}}\label{tbl:mpi-hybrid-epD-xception}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -10,15 +10,18 @@
         row{2} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=2]{c} Hybrid \\
+        & \SetCell[c=4]{c} Hybrid \\
     \hline
-        Configurations              & Measured power draw [W]   & Increase in power draw during tests [\%] \\
+        Configurations          & {(Yokogawa) \\ Measured power draw \\ of entire node [W]}
+        & {Difference \\ (Base value: \\ 217.471) [W]}
+        & Offset [W]
+        & Increase [\%] \\
     \hline
-        1 GPU + Processes: 8        & 561.049                   & 78.28 \\
+        1 GPU + Processes: 8        & 561.049                   & 250.121 & 232.65 & 78.28 \\
     \hline
-        2 GPUs + Processes: 16      & 741.187                   & 135.53 \\
+        2 GPUs + Processes: 16      & 741.187                   & 263.442 & 45.971 & 135.53 \\
     \hline
-        4 GPUs + Processes: 32      & 915.957                   & 191.06 \\
+        4 GPUs + Processes: 32      & 915.957                   & 298.464 & 80.993 & 191.06 \\
     \hline
     \end{tblr}
 \end{table}
