--- a/tables/summary/mpi-hybrid-isD.tex
+++ b/tables/summary/mpi-hybrid-isD.tex
@@ -1,8 +1,8 @@
-\begin{table}[hbt!]
+\begin{table}[H]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{vinnana.kask}, device: \textbf{Hybrid}, implementation: \textbf{MPI-Fortran+Horovod-Python},\\
-    benchmark: \textbf{is.D.x+Xception}, data displayed: \textbf{increase in power draw}}\label{tbl:mpi-hybrid-isD-xception}
+    benchmark: \textbf{is.D.x+Xception}, data displayed: \textbf{differences in power draw}}\label{tbl:mpi-hybrid-isD-xception}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -10,15 +10,18 @@
         row{2} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=2]{c} Hybrid \\
+        & \SetCell[c=4]{c} Hybrid \\
     \hline
-        Configurations              & Measured power draw [W]   & Increase in power draw during tests [\%] \\
+        Configurations          & {(Yokogawa) \\ Measured power draw \\ of entire node [W]}
+        & {Difference \\ (Base value: \\ 217.471) [W]}
+        & Offset [W]
+        & Increase [\%] \\
     \hline
-        1 GPU + Processes: 8        & 547.1                     & 73.85 \\
+        1 GPU + Processes: 8        & 547.1                     & 254.04 & 36.569 & 73.85 \\
     \hline
-        2 GPUs + Processes: 16      & 697.771                   & 121.73 \\
+        2 GPUs + Processes: 16      & 697.771                   & 268.343 & 50.872 & 121.73 \\
     \hline
-        4 GPUs + Processes: 32      & 720.439                   & 1128.93 \\
+        4 GPUs + Processes: 32      & 720.439                   & 283.656 & 66.185 & 128.93 \\
     \hline
     \end{tblr}
 \end{table}
