--- a/tables/summary/mpi-hybrid-luC.tex
+++ b/tables/summary/mpi-hybrid-luC.tex
@@ -1,8 +1,8 @@
-\begin{table}[hbt!]
+\begin{table}[H]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{vinnana.kask}, device: \textbf{Hybrid}, implementation: \textbf{MPI-Fortran+Horovod-Python},\\
-    benchmark: \textbf{lu.C.x+Xception}, data displayed: \textbf{increase in power draw}}\label{tbl:mpi-hybrid-luC-xception}
+    benchmark: \textbf{lu.C.x+Xception}, data displayed: \textbf{differences in power draw}}\label{tbl:mpi-hybrid-luC-xception}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -10,15 +10,18 @@
         row{2} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=2]{c} Hybrid \\
+        & \SetCell[c=4]{c} Hybrid \\
     \hline
-        Configurations              & Measured power draw [W]   & Increase in power draw during tests [\%] \\
+        Configurations          & {(Yokogawa) \\ Measured power draw \\ of entire node [W]}
+        & {Difference \\ (Base value: \\ 217.471) [W]}
+        & Offset [W]
+        & Increase [\%] \\
     \hline
-        1 GPU + Processes: 8        & 562.155                   & 78.64 \\
+        1 GPU + Processes: 8        & 562.155                   & 256.195 & 38.724 & 78.64 \\
     \hline
-        2 GPUs + Processes: 16      & 731.711                   & 132.52 \\
+        2 GPUs + Processes: 16      & 731.711                   & 274.612 & 57.141 & 132.52 \\
     \hline
-        4 GPUs + Processes: 32      & 850.486                   & 170.26 \\
+        4 GPUs + Processes: 32      & 850.486                   & 298.897 & 81.426 & 170.26 \\
     \hline
     \end{tblr}
 \end{table}
