--- a/tables/summary/omp-cuda-epD.tex
+++ b/tables/summary/omp-cuda-epD.tex
@@ -1,8 +1,8 @@
-\begin{table}[hbt!]
+\begin{table}[H]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{GPUs}, implementation: \textbf{OMP-CUDA},\\
-    benchmark: \textbf{ep.D}, data displayed: \textbf{increase in power draw}}\label{tbl:omp-cuda-epD}
+    benchmark: \textbf{ep.D}, data displayed: \textbf{differences in power draw}}\label{tbl:omp-cuda-epD}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -10,17 +10,20 @@
         row{2,5-6,9-10} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=2]{c} GPUs  \\
+        & \SetCell[c=4]{c} GPUs  \\
     \hline
-        Configurations          & Measured power draw [W]   & Increase in power draw during tests [\%] \\
+        Configurations          & {(Yokogawa) \\ Measured power draw \\ of entire node [W]}
+        & {Difference \\ (Base value: \\ 192.064) [W]}
+        & Offset [W]
+        & Increase [\%] \\
     \hline
-        1 GPU                   & 547.031                   & 52.98 \\
+        1 GPU                   & 547.031                   & 228.817 & 36.753 & 52.98 \\
     \hline
-        2 GPUs                  & 703.097                   & 96.63 \\
+        2 GPUs                  & 703.097                   & 240.029 & 47.965 & 96.63 \\
     \hline
-        4 GPUs                  & 1287.656                  & 260.11 \\
+        4 GPUs                  & 1287.656                  & 513.454 & 321.39 & 260.11 \\
     \hline
-        8 GPUs                  & 1946.823                  & 444.45 \\
+        8 GPUs                  & 1946.823                  & 552.864 & 360.8 & 444.45 \\
     \hline
     \end{tblr}
 \end{table}
