--- a/tables/summary/omp-cuda-spD.tex
+++ b/tables/summary/omp-cuda-spD.tex
@@ -1,8 +1,8 @@
-\begin{table}[hbt!]
+\begin{table}[H]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{GPUs}, implementation: \textbf{OMP-CUDA},\\
-    benchmark: \textbf{sp.D}, data displayed: \textbf{increase in power draw}}\label{tbl:omp-cuda-spD}
+    benchmark: \textbf{sp.D}, data displayed: \textbf{differences in power draw}}\label{tbl:omp-cuda-spD}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -10,17 +10,20 @@
         row{2,5-6,9-10} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=2]{c} GPUs  \\
+        & \SetCell[c=4]{c} GPUs  \\
     \hline
-        Configurations          & Measured power draw [W]   & Increase in power draw during tests [\%] \\
+        Configurations          & {(Yokogawa) \\ Measured power draw \\ of entire node [W]}
+        & {Difference \\ (Base value: \\ 192.064) [W]}
+        & Offset [W]
+        & Increase [\%] \\
     \hline
-        1 GPU                   & 604.859                   & 69.16 \\
+        1 GPU                   & 604.859                   & 222.063 & 29.999 & 69.16 \\
     \hline
-        2 GPUs                  & 807.122                   & 125.72 \\
+        2 GPUs                  & 807.122                   & 216.811 & 24.747 & 125.72 \\
     \hline
-        4 GPUs                  & 1488.43                   & 316.26 \\
+        4 GPUs                  & 1488.43                   & 505.546 & 313.482 & 316.26 \\
     \hline
-        8 GPUs                  & 2479.957                  & 593.55 \\
+        8 GPUs                  & 2479.957                  & 641.188 & 449.124 & 593.55 \\
     \hline
     \end{tblr}
 \end{table}
