--- a/tables/summary/omp-hybrid-isD-spD.tex
+++ b/tables/summary/omp-hybrid-isD-spD.tex
@@ -1,8 +1,8 @@
-\begin{table}[hbt!]
+\begin{table}[H]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{Hybrid}, implementation: \textbf{OMP-CPP+OMP-CUDA},\\
-    benchmarks: \textbf{is.D+sp.D}, data displayed: \textbf{increase in power draw}}\label{tbl:omp-hybrid-isD-spD}
+    benchmarks: \textbf{is.D+sp.D}, data displayed: \textbf{differences in power draw}}\label{tbl:omp-hybrid-isD-spD}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -10,17 +10,20 @@
         row{2,5-6,9-10} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=2]{c} Hybrid  \\
+        & \SetCell[c=4]{c} Hybrid  \\
     \hline
-        Configurations          & Measured power draw [W]   & Increase in power draw during tests [\%] \\
+        Configurations          & {(Yokogawa) \\ Measured power draw \\ of entire node [W]}
+        & {Difference \\ (Base value: \\ 192.064) [W]}
+        & Offset [W]
+        & Increase [\%] \\
     \hline
-        1 GPU + 4 Threads       & 625.727                   & 74.99 \\
+        1 GPU + 4 Threads       & 625.727                   & 232.692 & 40.628 & 74.99 \\
     \hline
-        2 GPUs + 8 Threads      & 840.728                   & 135.12 \\
+        2 GPUs + 8 Threads      & 840.728                   & 243.509 & 51.445 & 135.12 \\
     \hline
-        4 GPUs + 16 Threads     & 1666.487                  & 366.05 \\
+        4 GPUs + 16 Threads     & 1666.487                  & 655.883 & 463.819 & 366.05 \\
     \hline
-        8 GPUs + 32 Threads     & 2503.797                  & 600.22 \\
+        8 GPUs + 32 Threads     & 2503.797                  & 691.456 & 499.392 & 600.22 \\
     \hline
     \end{tblr}
 \end{table}
