--- a/tables/summary/omp-hybrid-luC-epD.tex
+++ b/tables/summary/omp-hybrid-luC-epD.tex
@@ -1,8 +1,8 @@
-\begin{table}[hbt!]
+\begin{table}[H]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{Hybrid}, implementation: \textbf{OMP-CPP+OMP-CUDA},\\
-    benchmarks: \textbf{lu.C+ep.D}, data displayed: \textbf{increase in power draw}}\label{tbl:omp-hybrid-luC-epD}
+    benchmarks: \textbf{lu.C+ep.D}, data displayed: \textbf{differences in power draw}}\label{tbl:omp-hybrid-luC-epD}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -10,17 +10,20 @@
         row{2,5-6,9-10} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=2]{c} Hybrid  \\
+        & \SetCell[c=4]{c} Hybrid  \\
     \hline
-        Configurations          & Measured power draw [W]   & Increase in power draw during tests [\%] \\
+        Configurations          & {(Yokogawa) \\ Measured power draw \\ of entire node [W]}
+        & {Difference \\ (Base value: \\ 192.064) [W]}
+        & Offset [W]
+        & Increase [\%] \\
     \hline
-        1 GPU + 4 Threads       & 577.48                    & 61.50 \\
+        1 GPU + 4 Threads       & 577.48                    & 240.535 & 48.471 & 61.50 \\
     \hline
-        2 GPUs + 8 Threads      & 749.685                   & 109.66 \\
+        2 GPUs + 8 Threads      & 749.685                   & 256.85 & 64.786 & 109.66 \\
     \hline
-        4 GPUs + 16 Threads     & 1399.988                  & 291.52 \\
+        4 GPUs + 16 Threads     & 1399.988                  & 566.485 & 374.421 & 291.52 \\
     \hline
-        8 GPUs + 32 Threads     & 2031.805                  & 468.22 \\
+        8 GPUs + 32 Threads     & 2031.805                  & 598.743 & 406.679 & 468.22 \\
     \hline
     \end{tblr}
 \end{table}
